--- a/bait/index.html
+++ b/bait/index.html
@@ -9,42 +9,37 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-    <div class="container">
-        <div class="content">
-            <div class="content1">
-                <h3>Air</h3>
-                <p>Facilis ipsum reprehender it nemo molestias.Aut cum mollitia reprehenderit .Eos cumque dicta adipisci
-                    architecto culpa amet</p>
-            </div>
-            <div class="content1">
-                <h3>Links</h3>
-                <ul>
-                    <li>Home</li>
-                    <li>Portfolio</li>
-                    <li>Blog</li>
-                    <li>About</li>
-                </ul>
-            </div>
-            <div class="content1">
-                <h3>Categories</h3>
-                <ul>
-                    <li>Landing Page</li>
-                    <li>Real Estate</li>
-                    <li>Personal</li>
-                    <li>Business</li>
-                    <li>e-Commerce</li>
-                </ul>
-            </div>
-            <div class="content1">
-                <h3>Contact Information</h3>
-                <p>198 West 21th Street,Suite 721 New York NY 10016</p>
-                <a href="https://www.w3schools.com/">+ 1235 2355 98</a><br />
-                <a href="https://www.w3schools.com/">info@yoursite.com</a>
-            </div>
-        </div>
-    </div>
-
 </body>
+
+<div class="containe">
+
+<div class="content">
+    <ul>
+        <li>
+            <p class="icon"><img src="../image/earth.jpg.png"></p>
+            <p class="lst">3297</p>
+            <p>foreign Followers</p>
+        </li>
+        <li>
+            <p class="icon"><img src="../image/anh1.jpg"></p>
+            <p class="lst">3700</p>
+            <p>Students enrolled</p>
+        </li>
+        <li>
+            <p class="icon"><img src="../image/anh2.jpg"></p>
+            <p class="lst">5034</p>
+            <p>Classes Complete</p>
+        </li>
+        <li>
+            <p class="icon"><img src="../image/anh.jpg"></p>
+            <p class="lst">1080</p>
+            <p>Certified Teacherers</p>
+        </li>
+    </ul>
+
+
+</div>
+</div>
+
 
 </html>
